<resources>
    <string name="drawer_open">Open Main Menu</string>
    <string name="drawer_close">Close Main Menu</string>
    <string name="whats_new_title">Check out what has changed</string>
    <string name="whats_new">Release notes</string>
    <string name="text_was_copied_to_clipboard">Text copied to clipboard.</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="image_could_not_be_read">The image was not found in the data sent.</string>
    <string name="image_does_not_exist">The image was not found on your phone.</string>
    <string name="camera_app_not_found">Camera app not found.</string>
    <string name="gallery_io_error">Image could not be loaded.</string>
    <string name="media_store_returned_null">Gallery returned no image to me.</string>
    <string name="camera_app_error">Camera app error.</string>
    <string name="camera_no_image_returned">Camera app returned no image.</string>
    <string name="please_wait">Please wait</string>
    <string name="loading_image">Loading image..</string>
    <string name="please_tap_on_column">Please tap on a text column first</string>
    <string name="get_more_languages">Get more languages</string>
    <string name="aborts_scan">Aborts current scan!</string>
    <string name="send_mail">Drop me a line.</string>
    <string name="hocr2pdf_title">
        <a href="http://www.exactcode.com/site/open_source/exactimage/hocr2pdf/">hocr2pdf</a>
        from exactCODE
    </string>
    <string name="hocr2pdf_summary">hocr2pdf is a command line front-end for the image processing
        library to create perfectly layouted, searchable PDF files from hOCR, annotated HTML, input
        obtained from an OCR system.
    </string>
    <string name="leptonica_title">
        <a href="http://www.leptonica.com/">leptonica</a>
    </string>
    <string name="leptonica_summary">Leptonica is a pedagogically-oriented open source site
        containing software that is broadly useful for image processing and image analysis
        applications.
    </string>
    <string name="tesseract_ocr_title">
        <a href="https://github.com/tesseract-ocr/tesseract">tesseract-ocr</a>
    </string>
    <string name="tesseract_ocr_summary">Tesseract is probably the most accurate open source OCR
        engine available.
    </string>
    <string name="contact_welcome_text">Hi, my name is Renard. I have created the Text Fairy in my
        free time. I hope she is useful for you.
    </string>
    <string name="download_failed">Downloading of %1$s failed!</string>
    <string name="language_downloaded">%1$s language data downloaded</string>
    <string name="app_name">THU OCR</string>
    <string name="tips">Tips</string>
    <string name="ocr_language_delete">Delete</string>
    <string name="download_title">Language data for %s</string>
    <string name="ocr_language_title">Manage Languages</string>
    <string name="pref_summary_rate">Rate the text fairy</string>
    <string name="pref_summary_license">Learn about the software that was used to create the Text
        Fairy.
    </string>
    <string name="pref_summary_contact">Learn about the creator and supply feedback.</string>
    <string name="pref_summary_default_ocr_lang">Download and manage languages for text
        recognition.
    </string>
    <string name="pref_summary_data_directory">Specify the directory where the text fairy should
        look for language files. Only change this if you know what you are doing.
    </string>
    <string name="pref_title_data_directory">Tessdata directory</string>
    <string name="pref_title_rate">Rate</string>
    <string name="pref_title_default_ocr_lang">Document language</string>
    <string name="pref_title_help">Show tips</string>
    <string name="pref_title_contact">Contact information</string>
    <string name="pref_title_license">Licence info</string>
    <string name="pref_summary_help">Tips for improving the optical character recognition (OCR)
    </string>
    <string name="error_create_file">I\'m sorry but was not able to store your photo on the SD
        card.
    </string>
    <string name="share_subject">scanned text</string>
    <string name="save_success">Save successful</string>
    <string name="save_fail">Save failed!</string>
    <string name="share_chooser_title">Select how you want to share the text</string>
    <string name="progress_start">Starting</string>
    <string name="download_language">Download</string>
    <string name="empty_grid_download_language">Download your language.</string>
    <string name="progress_dewarp">Straightening text</string>
    <string name="progress_ocr">Reading text</string>
    <string name="delete">Delete</string>
    <string name="edit_title">Change title</string>
    <string name="cancel">Cancel</string>
    <string name="edit_dialog_title">Enter a title for your document</string>
    <string name="delete_error">Sorry, I could not delete this document</string>
    <string name="error_could_not_take_photo">Sorry, I could not read the photo</string>
    <string name="empty"/>
    <string name="cropping_image">Cropping image</string>
    <string name="error_title">Error</string>
    <string name="error_load_file">I\'m sorry but I was not able to find the file. Maybe it was
        deleted?
    </string>
    <string name="pdf_creation_message">Creating your PDF!</string>
    <string name="option_view_mode">Switch view</string>
    <string name="document_layout_dialog">How many columns?</string>
    <string name="layout_complex">More than one column.</string>
    <string name="layout_simple">One column.</string>
    <string name="saving_document">Saving Document</string>
    <string name="button_column_pick_completed">start text recognition</string>
    <string name="export_as_pdf">Create PDF</string>
    <string name="delete_language_title">Delete %1$s?</string>
    <string name="delete_language_message">You\'ll free up %1$d kb.</string>
    <string name="delete_dialog_message">Deleting Documents..</string>
    <string name="progress_pdf_creation">Creating page %1$d/%2$d</string>
    <string name="option_text">Text settings</string>
    <string name="option_content">Table of contents</string>
    <string name="option_line_spacing">Line spacing</string>
    <string name="option_text_alignment">Text alignment</string>
    <string name="options_preview_text">This is a preview of your current text settings. Press the
        back key to continue reading.\nLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
        diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
        voluptua.
    </string>
    <string name="progress_analyse_layout">I\'m analysing the layout. Please wait some seconds.
    </string>
    <string name="progress_image_detection">Searching for text</string>
    <string name="progress_assemble_pix">I\'m assembling the final picture now.</string>
    <string name="progress_choose_columns">Please choose the text and images you want in the final
        document
    </string>
    <string name="new_photo">New photo</string>
    <string name="no_sd_card">No SD card mounted. Is the phone connected to your pc? If so please
        remove it and try again.
    </string>
    <string name="rotate_right">Rotate right</string>
    <string name="rotate_left">Rotate left</string>
    <string name="content_description_fairy">The helpful text fairy</string>
    <string name="crop_title">Choose image section</string>
    <string name="text_options_title">Change your text settings</string>
    <string name="app_options_title">Change your settings</string>
    <string name="edit_title_hint">Enter a title</string>
    <string name="option_gallery_title">Pick an image from the gallery</string>
    <string name="option_camera_title">Make a new photo</string>
    <string name="option_preference_title">Settings</string>
    <string name="show_tips">Show tips</string>
    <string name="document_help_title">You can manage your document here.</string>
    <string name="fairy_welcome_bubble">I\'m the Text Fairy</string>
    <string name="new_photo_gallery">Pick gallery photo</string>
    <string name="show_documents">Manage documents</string>
    <string name="join">Join</string>
    <string name="join_documents_title">Joining Documents</string>
    <string name="join_documents_result">%1$d documents joined</string>
    <string name="start_app">Let\'s go</string>
    <string name="install_error_disk_space">Not enough disk space. You need to free %1$d MB on your
        SD card
    </string>
    <string name="install_error">Could not install configuration files.</string>
    <string name="toc_title">Table of contents</string>
    <string name="start_text_1">What i can do!…</string>
    <string name="start_text_2">I extract editable text from pictures. Tap on me to learn more…
    </string>
    <string name="start_text_3">Take a new picture or chose one from your gallery…</string>
    <string name="start_text_4">Crop the picture and tell me if it contains more than one column of
        text…
    </string>
    <string name="start_text_5">You can now edit the text or convert it to a pdf file. How was you
        experience using this app?
    </string>
    <string name="start_text_6">Try it out! I will be helping you if you got question…</string>
    <string name="start_text_7">… but do not forget: even androids are not perfekt. Not every
        picture can be converted to text…
    </string>
    <string name="start_text_8">But i\'ll do my best…</string>
    <string name="start_text_9">You can send me feedback. Tap on preferences to find the contact
        details.
    </string>
    <string name="start_text_10">What is a robot’s favorite type of music?…</string>
    <string name="start_text_11">Heavy metal!</string>
    <string name="start_text_12">Two bytes meet. The first byte asks, “Are you ill?” The second byte
        replies…
    </string>
    <string name="start_text_13">“No, just feeling a bit off.”</string>
    <string name="start_text_14">There are two ways to write error-free computer programs…</string>
    <string name="start_text_15">only the third one works.</string>
    <string name="start_text_16">In the beginning God created the Bit and the Byte…</string>
    <string name="start_text_17">And from those he created the Word.</string>
    <string name="start_text_18">Why are lawyers safe from the threat of automation taking over
        their professions…
    </string>
    <string name="start_text_19">No one would build a robot to do nothing.</string>
    <string name="start_text_20">A robot walks into a bar…</string>
    <string name="text_to_speech">Speak text</string>
    <string name="share_text">Share text</string>
    <string name="empty_grid_camera">Tap here to convert text from a new image.</string>
    <string name="empty_grid_gallery">Tap here to convert text from an existing image.</string>
    <string name="empty_grid_fairy">P.S. Tap on the fairy for more info.</string>
    <string name="greeting">Hello</string>
    <string name="text_is_in">"The text is in: "</string>
    <string name="empty_grid_language">I can read English but you can download more languages.
    </string>
    <string name="first_scan_successful">Congratulations, you are getting good at it!</string>
    <string name="love_it">Love it!</string>
    <string name="could_be_better">Could be better</string>
    <string name="feedback_description">How was your experience using this app?</string>
    <string name="first_time_bad_result">Please read the tips or send me your feedback and I\'ll try
        to help you.
    </string>
    <string name="install_ok">Installation Success</string>
    <string name="thu_ocr">Tsinghua University</string>
    <string name="option_batch">Batch OCR</string>
    <string name="history_ocr">History Managment</string>
</resources>