<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_edit_title"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/edit_title"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/item_join"
        android:icon="@drawable/ic_action_merge"
        android:title="@string/join"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/item_export_as_pdf"
        android:icon="@drawable/ic_action_pdf"
        android:title="@string/export_as_pdf"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/item_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        app:showAsAction="always">
    </item>
</menu>