<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:clickable="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fairy_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_half"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="center_vertical|left"
        android:padding="@dimen/default_padding"
        android:text="@string/first_scan_successful"
        android:textAppearance="@style/FairySpeechbubble"
        android:textSize="18sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/explanation_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="@dimen/default_padding"
        android:text="@string/feedback_description"
        android:textSize="16sp"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/could_be_better"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/could_be_better"
            android:textSize="14sp"/>

        <View
            android:id="@+id/button_divider"
            android:layout_width="1dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginLeft="@dimen/default_padding_half"
            android:layout_marginRight="@dimen/default_padding_half"
            android:background="@color/grey6"/>

        <Button
            android:id="@+id/love_it"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_heart"
            android:text="@string/love_it"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>