<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imageView_fairy"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/empty"
            android:scaleType="fitCenter"
            android:src="@drawable/textfairy_walking"/>

        <TextView
            android:id="@+id/fairy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imageView_fairy"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/install_ok"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"/>

    </RelativeLayout>

    <Button
        android:id="@+id/button_start_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/start_app"
        android:textColor="@android:color/white"
        android:theme="@style/ColoredButton"
        android:visibility="invisible"
        tools:visibility="visible"/>

</RelativeLayout>