<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <TextView
        android:id="@+id/help_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding_half"
        android:drawableLeft="@drawable/warte3"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="center_vertical|left"
        android:textAppearance="@style/FairySpeechbubble"
        android:textSize="18sp"
        android:textStyle="bold">
    </TextView>

    <View
        android:id="@+id/divider0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey6"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/explanation_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_padding"
        android:background="@android:color/white"
        android:padding="@dimen/default_padding_half"
        android:text="@string/first_time_bad_result"
        android:textSize="16sp"
        android:visibility="gone"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey6"/>

    <Button
        android:id="@+id/button_share_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_start_activity2"
        android:drawableLeft="@drawable/ic_action_share_dark"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="left|center"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:text="@string/share_text"/>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey6"/>

    <Button
        android:id="@+id/button_copy_to_clipboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_start_activity2"
        android:drawableLeft="@drawable/ic_action_content_copy_dark"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="left|center"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:text="@string/copy_to_clipboard"/>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey6"/>

    <Button
        android:id="@+id/button_text_to_speech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_start_activity2"
        android:drawableLeft="@drawable/ic_action_text_to_speech"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="left|center"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:text="@string/text_to_speech"/>

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey6"/>

    <Button
        android:id="@+id/button_export_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_start_activity2"
        android:drawableLeft="@drawable/ic_action_pdf_light"
        android:drawablePadding="@dimen/default_padding"
        android:gravity="left|center"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:text="@string/export_as_pdf"/>

</LinearLayout>