<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/fairy_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_ocr_language"
            style="@android:style/TextAppearance.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_language"
            android:gravity="center_horizontal"
            android:text="@string/text_is_in"/>

        <Spinner
            android:id="@+id/button_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/textview_ocr_language"
            android:drawSelectorOnTop="true"
            tools:listitem="@android:layout/simple_spinner_item"/>

        <ViewFlipper
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding_half"
            android:layout_marginTop="@dimen/default_padding_half"
            android:layout_below="@+id/button_language"
            android:inAnimation="@anim/push_down_in"
            android:outAnimation="@anim/abc_fade_out">

            <TextView
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:text="@string/document_layout_dialog"/>

            <TextView
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:text="@string/layout_simple"/>

            <TextView
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|left"
                android:text="@string/layout_complex"/>

        </ViewFlipper>

        <LinearLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_title"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/column_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/column_layout"/>

            <ImageView
                android:id="@+id/fairy_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/fairy_looks_center"/>

            <ImageView
                android:id="@+id/page_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/page_layout"/>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>